--- a/templates/edit_trail.html
+++ b/templates/edit_trail.html
@@ -10,7 +10,7 @@
                 <div class="input-field col s12">
                     <i class="prefix light-blue-text text-darken-4"></i>
                     <input id="trail_title" name="trail_title" minlength="5" maxlength="50"
-                    type="text" class="validate" required>
+                    value="{{ trail.trail_title }}"type="text" class="validate" required>
                     <label for="trail_title">Title</label>
                 </div>
             </div>
@@ -18,8 +18,10 @@
             <div class="row">    
                 <div class="input-field col s12">
                     <i class="prefix light-blue-text text-darken-4"></i>
-                    <input id="trail_address"  name="trail_address" minlength="5" maxlength="50"
+                    <textarea id="trail_address"  name="trail_address" minlength="5" maxlength="50"
                     type="text" class="validate required">
+                    {{- trail.trail_address -}}
+                    </textarea>
                     <label for="trail_address">Address</label>
                 </div>
             </div>
@@ -41,7 +43,9 @@
                 <div class="input-field col s12">
                     <i class="prefix light-blue-text text-darken-4"></i>
                     <textarea id="trail_description" name="trail_description" minlength="5"
-                        maxlength="4000" class="materialize-textarea validate" required></textarea>
+                        maxlength="4000" class="materialize-textarea validate" required>
+                        {{- trail.trail_description -}}
+                    </textarea>
                     <label for="trail_description">Trail Description</label>
                 </div>
             </div>
@@ -50,7 +54,9 @@
                     <div class="input-field col s12">
                         <i class="prefix light-blue-text text-darken-4"></i>
                         <textarea id="trail_directions" name="trail_directions" minlength="5"
-                            maxlength="4000" class="materialize-textarea validate" required></textarea>
+                            maxlength="4000" class="materialize-textarea validate" required>
+                            {{- trail.trail_directions -}}
+                        </textarea>
                             <label for="trail_directions">Trail Directions</label>
                     </div>
             </div>
@@ -59,8 +65,12 @@
          <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
+                    <!-- cancel button -->
+                    <a href="{{ url_for('trails') }}" class="btn-large brown darken-3 text-shadow">
+                        Cancel <i class="fas fa-times-circle right"></i>
+                    </a>
                     <button type="submit" class="btn-large teal darken-3 text-shadow">
-                        Edit Trail <i class="fab fa-edit right right"></i>
+                        Edit Trail <i class="fab fa-pagelines right right"></i>
                     </button>
                 </div>
             </div>
