--- a/templates/trails.html
+++ b/templates/trails.html
@@ -1,14 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 
+
+<h3 class="center-align light-blue-text text-darken-4">
+    All Trails
+ </h3>
+
     <ul class="collapsible">
         {% for trail in trails %}
         <li>
             <div class="collapsible-header black-text teal lighten-5 text-shadow-white">
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
-                    <a href="" class="btn-small brown darken-4">Done</a>
+                    {% if session.user|lower == trail.created_by|lower %}
+                    <a href="" class="btn-small brown darken-4">Delete</a>
                     <a href="{{ url_for('edit_trail', trail_id=trail._id) }}" class="btn-small teal darken-3">Edit</a>
+                    {% endif %}
                 </div>
                     <div class="col s9">
                         
