--- a/templates/trails.html
+++ b/templates/trails.html
@@ -13,7 +13,7 @@
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     {% if session.user|lower == trail.created_by|lower %}
-                    <a href="" class="btn-small brown darken-4">Delete</a>
+                    <a href="{{ url_for('delete_trail', trail_id=trail._id) }}" class="btn-small brown darken-4">Delete</a>
                     <a href="{{ url_for('edit_trail', trail_id=trail._id) }}" class="btn-small teal darken-3">Edit</a>
                     {% endif %}
                 </div>
