--- a/templates/trails.html
+++ b/templates/trails.html
@@ -2,10 +2,29 @@
 {% block content %}
 
 
-<h3 class="center-align light-blue-text text-darken-4">
+<h3 class="center-align black-text">
     All Trails
  </h3>
+ 
+ <div class="row card-panel grey lighten-5">
+    <form action="{{ url_for('search') }}" method="post" class="col s12">
+        <div class="row valign-wrapper center-align">
+            <div class="input-field col s12 m8">
+                <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                <label for="query">Search Tasks</label>
+            </div>
+            <div class="col s12 m4">
+                <a href="{{ url_for('trails') }}" class="brown darken-3 btn text-shadow">Reset</a>
+                <button type="submit" class="teal darken-three btn text-shadow">
+                    <i class="fas fa-search left"></i> Search
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
 
+    {% if trails|length > 0 %}
     <ul class="collapsible">
         {% for trail in trails %}
         <li>
@@ -31,5 +50,8 @@
         </li>
         {% endfor %}
     </ul>
+    {% else %}
+        <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+    {% endif %}
 
 {% endblock %}
