--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@ body {
 #tag-line{
     text-transform: uppercase;
     font-size: 3em;
-    text-shadow: 2px 2px 2px;
+    text-shadow: 2px 2px 2px black;
 }
 
 h2 {
